# ml-fraud-detector

./: .gitignore  README.md  main.py  pyproject.toml  requirements-webapp.txt  requirements.txt  run.py
data/: xgboost_hyperparameters.json
data/archive/: xgboost_hyperparameters_v2.1.0_old_location_20251003.json
data/examples/: fraud_transaction.json  legitimate_transaction.json
database/: docker-compose.yml  schema.sql
database/migrations/: create_webapp_tables.sql
docs/: API_ENDPOINTS.md  DATA_ARCHITECTURE.md  DECISOES_TECNICAS.md  EDA_REPORT.md  MODEL_SELECTION.md  TODO.md  TRANSACTION_EXAMPLES.md
models/: scalers.pkl  xgboost_v2.1.0.pkl
src/: __init__.py
src/api/: __init__.py  routes.py
src/ml/: README.md  __init__.py
src/ml/models/: __init__.py  configs.py
src/ml/pipelines/: __init__.py  data_pipeline.py
src/ml/processing/: __init__.py  cleaning.py  feature_engineering.py  feature_selection.py  loader.py  metadata.py  normalization.py  splitters.py  validation.py
src/ml/training/: __init__.py  train.py  tune.py
src/models/: __init__.py  database_models.py
src/services/backend/: __init__.py  config.py  routes.py
src/services/database/: __init__.py  connection.py  database_service.py
src/services/frontend/static/css/: style.css
src/services/frontend/static/js/: app.js
src/services/frontend/templates/: index.html
src/services/ml/: __init__.py  model_service.py  transaction_generator.py
