[project]
name = "ml-fraud-detector"
version = "0.1.0"
description = "Sistema de Detecção de Fraude em Cartão de Crédito com ML"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Database
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    # Data Science & ML
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    # Visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    # Web Framework
    "flask>=3.0.0",
    # Model Serialization
    "joblib>=1.3.0",
    "statsmodels>=0.14.5",
    "tqdm>=4.67.1",
    "xgboost>=3.0.5",
]
